--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
         <title> Yongwon Cho</title>
     </head>
     <body>
-        <h1> Yongwon Cho</h1>
-        <h2> KAIST Biological Sciences</h2>
-        <h3> 980719</h3>
+        <h1>Yongwon Cho</h1>
+        <h2>KAIST Biological Sciences</h2>
         <hr/>
+        <h2>Education</h2>
+        <h3>Korea Science Academy of KAIST</h3>
+        <h3>KAIST</h3>
+        B.S. in Biological Sciences
+        <hr/>
+        <h2></h2>
     </body>
 
 
